--- a/css/index.css
+++ b/css/index.css
@@ -319,20 +319,34 @@ h1{
     opacity: 1;
 }
 @media screen and (max-width: 769px) {
+    #web{
+        margin-bottom: 350px;
+    }
     .web{
         border-radius: 30px 30px 0px 0px;
     }
     #web-first,#web-gaja{
-        margin-top: 370px;
+        margin-top: 320px;
     }
     .coverarea{
         opacity: 1;
         top:350px;
-        background-color: #fff2e7;
+        height: 300px;
+/*        background-color: #2f3446;*/
         border-radius: 0px 0px 30px 30px;
         padding: 0 6%;
     }
+    #web-pento .coverarea{
+        background-color: #FEFBEE;
+    }
+    #web-gaja .coverarea{
+        background-color: #F7F7F7;
+    }
+    #web-first .coverarea{
+        background-color: #183645;
+    }
     .coverarea h3{
+        font-size: 1.2em;
         color: #ffb779;
         text-align: center;
         border-bottom: 2px solid #ffb779;
@@ -341,6 +355,16 @@ h1{
     }
     .coverarea p{
         color:#7492ac;
+        font-size: 0.9em;
+    }
+    #web-pento .coverarea p{
+        color:#aa9989;
+    }
+    #web-gaja .coverarea p{
+        color:#86a29b;
+    }
+    #web-first .coverarea p{
+        color:#bfc7ce;
     }
     .coverarea a{
         color: #ffb779;
@@ -348,6 +372,9 @@ h1{
         background: -o-linear-gradient(left, rgba(189, 195, 199, 0), rgba(255, 255, 255, 0), rgba(189, 195, 199, 0));
         background: linear-gradient(to right, rgba(189, 195, 199, 0), rgba(255, 255, 255, 0), rgba(189, 195, 199, 0));
         border: 2px solid #ffb779;
+        line-height: 40px;
+        height: 40px;
+        margin-top: 5px;
     }
     .coverarea a:hover{
         color: #ffa01f;
@@ -359,8 +386,190 @@ h1{
 /*Portfolio graphic________________________*/
 #graphic{
     width: 100%;
-    height: 500px;
-    background-color: #9d6822;
+/*    height: 500px;*/
+}
+#graphic ul{
+    width: 100%;
+/*    height: 1000px;*/
+/*    background-color: aqua;*/
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.gra{
+    position: relative;
+    padding-bottom: 20%;
+    background-color: fuchsia;
+    margin: 1.3% 1%;
+    border-radius: 30px;
+    box-shadow: 12px 12px 7px rgba(0, 0, 0, 0.2);
+}
+@media screen and (max-width: 1300px) {
+    .gra{
+        padding-bottom: 30%;    
+    }
+}
+@media screen and (max-width: 769px) {
+    .gra{
+        padding-bottom: 40%;    
+    }
+}
+/*平面作品縮圖================*/
+.gra{
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+.gw27{
+    width: 27%;
+}
+.gw40{
+    width: 40%;
+}
+.gw48{
+    width: 48%;
+}
+.gw313{
+    width: 31.3%;
+}
+.gw48-2{
+    width: 48%;
+}
+.gw98{
+    width: 98%;
+}
+.gw98-2{
+    width: 98%;
+}
+#gra01{
+    background-image: url("../images/gallery/tanloo-02.jpg");
+}
+#gra02{
+    background-image: url("../images/gallery/cis/sliver-02.png");
+}
+#gra03{
+    background-image: url("../images/gallery/%E5%8B%95%E7%89%A9%E5%90%88%E6%88%90.jpg");
+}
+#gra04{
+    background-image: url("../images/gallery/cis/zixuan-02.png");
+}
+#gra05{
+    background-image: url("../images/gallery/min9-02.jpg");
+}
+#gra06{
+    background-image: url("../images/gallery/hamm-02.png");
+}
+#gra07{
+    background-image: url("../images/gallery/alaska-02.png");
+}
+#gra08{
+    background-image: url("../images/gallery/");
+}
+#gra09{
+    background-image: url("../images/gallery/");
+}
+#gra10{
+    background-image: url("../images/gallery/");
+}
+#gra11{
+    background-image: url("../images/gallery/");
+}
+#gra12{
+    background-image: url("../images/gallery/");
+}
+#gra13{
+    background-image: url("../images/gallery/");
+}
+/*平面作品文字區================*/
+.gra .coverarea{
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    box-sizing: border-box;
+    padding: 20px 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(33, 33, 33, 0.79);
+    opacity: 1;
+    pointer-events:auto;
+}
+.gra .coverarea h3{
+    width: 100%;
+}
+#graphic ul li:hover .coverarea{
+    opacity: 1;
+}
+@media screen and (max-width: 769px){
+    .gra .coverarea{
+        top:0px;
+        border-radius: 30px;
+    }
+}
+/*平面作品點開大圖================*/
+.graimg{
+    z-index: 2;
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top:0px;
+    left: 0px;
+    background-color: rgba(49, 49, 49, 0.26);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+/*    opacity: 0;*/
+    cursor: default;
+    visibility:hidden;
+}
+.graimgshow{
+/*    opacity: 1;*/
+    visibility:visible;
+}
+.graimg>div{
+/*    background-color: fuchsia;*/
+    width: 65%;
+    height: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow-y:scroll;
+}
+.graimg img{
+    width: 100%;
+    align-self: flex-start;
+}
+.graimg button{
+    border: none;
+    color: #c4c4c4;
+    text-align: center;
+    text-decoration: none;
+    font-size: 1em;
+    background-color:#ffffff;
+    border-radius: 300px;
+    padding: 0.8% 1%;
+/*    cursor: pointer;*/
+    position: fixed;
+    top:91%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.graimg button i{
+    font-size: 1.5em;
+}
+@media screen and (max-width: 1300px){
+    .graimg>div{
+        width: 80%;
+    }
+}
+@media screen and (max-width: 769px){
+    .graimg>div{
+        width: 90%;
+    }
 }
 /*Portfolio movies________________________*/
 #movies{
