--- a/css/index.css
+++ b/css/index.css
@@ -270,14 +270,14 @@ h1{
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: rgba(105, 105, 105, 0.5);
+    background-color: rgba(255, 255, 255, 0.8);
     right: 0;
     border-radius:30px;
     color: #ffffff;
     pointer-events: none;
     opacity: 0;
-    transition: 1s;
-    -webkit-transition: 1s;
+    transition: 0.7s;
+    -webkit-transition: 0.7s;
     box-sizing: border-box;
     padding: 2% 3%;
 }
@@ -286,22 +286,29 @@ h1{
 }
 .coverarea h3{
     font-size: 1.4em;
-    line-height: 3;
-    color: #ffe6a3;
+    line-height: 2;
+    margin-bottom: 10px;
+    color: #b24922;
+    border-bottom: 2px solid #b24922;
+    text-shadow: none;
 }
 .coverarea p{
+    color: rgb(131, 130, 136);
     line-height: 1.5;
     letter-spacing: 2px;
+    font-size: 0.9em;
+    margin-bottom: 45px;
 }
 .coverarea a{
+    box-sizing: border-box;
     display: block;
     width: 100%;
     height: 50px;
-    color: blanchedalmond;
-    background: #bdc3c7;
-    background: -webkit-linear-gradient(left, rgba(189, 195, 199, 0), #2c3e50, rgba(189, 195, 199, 0));
-    background: -o-linear-gradient(left, rgba(189, 195, 199, 0), #2c3e50, rgba(189, 195, 199, 0));
-    background: linear-gradient(to right, rgba(189, 195, 199, 0), #2c3e50, rgba(189, 195, 199, 0));
+    color: #b24922;
+    background: -webkit-linear-gradient(left, rgba(189, 195, 199, 0), rgba(255, 255, 255, 0), rgba(189, 195, 199, 0));
+    background: -o-linear-gradient(left, rgba(189, 195, 199, 0), rgba(255, 255, 255, 0), rgba(189, 195, 199, 0));
+    background: linear-gradient(to right, rgba(189, 195, 199, 0), rgba(255, 255, 255, 0), rgba(189, 195, 199, 0));
+    border: 2px solid #b24922;
     text-align: center;
     line-height: 50px;
     opacity: 0.9;
@@ -309,14 +316,27 @@ h1{
     -webkit-transition: 0.5s;
     pointer-events: all;
     border-radius: 50px;
-    margin-top: 1%;
 }
 .coverarea a:hover{
-    background: #fceabb;
-    background: -webkit-linear-gradient(left, rgba(252, 234, 187, 0), #f8b500, rgba(252, 234, 187, 0));
-    background: -o-linear-gradient(left, rgba(252, 234, 187, 0), #f8b500, rgba(252, 234, 187, 0));
-    background: linear-gradient(to right, rgba(252, 234, 187, 0) #f8b500,rgba(252, 234, 187, 0));
+    color:white;
+    background: -webkit-linear-gradient(left, #b24922, #b24922, #b24922);
+    background: -o-linear-gradient(left, #b24922, #b24922, #b24922);
+    background: linear-gradient(to right, #b24922, #b24922, #b24922);
     opacity: 1;
+}
+@media screen and (max-width: 1300px) {
+    .coverarea h3{
+        line-height: 2;
+        font-size: 1.5em;
+    }
+    .coverarea p{
+        margin-top: 5px;
+    }
+    .coverarea a{
+        line-height: 40px;
+        height: 40px;
+        margin-top: 5px;
+    }
 }
 @media screen and (max-width: 769px) {
     #web{
@@ -332,7 +352,6 @@ h1{
         opacity: 1;
         top:350px;
         height: 300px;
-/*        background-color: #2f3446;*/
         border-radius: 0px 0px 30px 30px;
         padding: 0 6%;
     }
@@ -356,6 +375,7 @@ h1{
     .coverarea p{
         color:#7492ac;
         font-size: 0.9em;
+        margin-bottom: 0px; 
     }
     #web-pento .coverarea p{
         color:#aa9989;
@@ -505,7 +525,7 @@ h1{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgba(33, 33, 33, 0.79);
+    background-color: rgba(255, 255, 255, 0.8);
     opacity: 0;
     pointer-events:auto;
 }
@@ -519,16 +539,13 @@ h1{
 }
 @media screen and (max-width: 1300px){
     .gra .coverarea{
-        top:0px;
 /*        border-radius: 0px;*/
-        background-color: rgba(255, 255, 255, 0.8);
-        opacity: 1;
+        background-color: rgba(255, 255, 255, 0.9);
+        opacity: 0;
     }
     .gra .coverarea h3{
         line-height: 2;
         font-size: 1.2em;
-        color: #b24922;
-        border-bottom: 2px solid #b24922;
     }
     .gra .coverarea p{
         font-size: 0.8em;
@@ -537,7 +554,11 @@ h1{
     }
 }
 @media screen and (max-width: 769px){
-
+    .gra .coverarea{
+        top:0px;
+        opacity: 1;
+        
+    }
 }
 /*平面作品點開大圖================*/
 .graimg{
@@ -604,6 +625,69 @@ h1{
 /*Portfolio movies________________________*/
 #movies{
     width: 100%;
-    height: 200px;
-    background-color: #eda03a;
+    height: 800px;
+/*    background-color: #eda03a;*/
+}
+.movie{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 3%;
+    box-shadow: 12px 12px 7px rgba(0, 0, 0, 0.2);
+}
+#video01,.videotext{
+    width: 45%;
+/*    border: 1px solid red;*/
+}
+.videotextin{
+    width: 100%;
+    max-width: 400px;
+/*    background-color: aqua;*/
+    margin: 10px auto;
+}
+.videotextin h3{
+    line-height: 3;
+    font-size: 1.3em;
+    margin: 10px 0;
+    color: #ff9300;
+    
+}
+.videotextin p{
+    line-height: 1.5;
+}
+.videotextin a{
+    line-height: 2;
+    font-size: 0.8em;
+    text-align: center;
+    background-color: #ff9300;
+    color: white;
+    display: block;
+    box-sizing: border-box;
+    max-width: 100px;
+    padding:4px;
+    margin-top: 10px;
+    border-radius: 10px;
+}
+@media screen and (max-width: 1300px){
+    .movie{
+        flex-direction: column;
+        -webkit-filter: drop-shadow(12px 12px 7px rgba(0, 0, 0, 0.2));
+        filter: drop-shadow(12px 12px 7px rgba(0, 0, 0, 0.2));
+        box-shadow: none;
+    } 
+    .videotext{
+        background-color: #fcfcfc;
+        border-radius: 0 0 30px 30px;
+        box-sizing: border-box;
+        padding: 20px;
+    }
+    #video01,.videotext{
+        width: 100%;
+    }
+    .videotextin{
+        max-width: 600px;
+    }
+    .videotextin a{
+        max-width: none;
+    }
 }
