--- a/css/index.css
+++ b/css/index.css
@@ -431,7 +431,7 @@ h1{
 .gra{
     position: relative;
     padding-bottom: 20%;
-    background-color: fuchsia;
+    background-color: #e5e5e5;
     margin: 1.3% 1%;
     border-radius: 30px;
     box-shadow: 12px 12px 7px rgba(0, 0, 0, 0.2);
