--- a/css/headerfooter.css
+++ b/css/headerfooter.css
@@ -11,10 +11,15 @@ header{
     width: 50px;
 }
 .menu{
-    width: 80%;
+    width: 100%;
     height: 50px;
-    margin: 50px auto;
-/*    background-color: aqua;*/
+
+    background-color: rgba(255, 255, 255, 0.89);
+    position: fixed;
+    z-index: 9;
+    left: 0%;
+    top:0px;
+    box-shadow: 0px 3px 3px 3px rgba(0, 0, 0, 0.2);
 }
 .menu>ul{
     height: 100%;
