--- a/css/index.css
+++ b/css/index.css
@@ -418,11 +418,9 @@ h1{
 /*Portfolio graphic________________________*/
 #graphic{
     width: 100%;
-/*    height: 500px;*/
 }
 #graphic ul{
     width: 100%;
-/*    height: 1000px;*/
 /*    background-color: aqua;*/
     display: flex;
     flex-wrap: wrap;
@@ -574,13 +572,13 @@ h1{
 }
 /*平面作品點開大圖================*/
 .graimg{
-    z-index: 2;
+    z-index: 10;
     position: fixed;
     width: 100vw;
     height: 100vh;
     top:0px;
     left: 0px;
-    background-color: rgba(49, 49, 49, 0.26);
+    background-color: rgba(49, 49, 49, 0.6);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -595,7 +593,7 @@ h1{
 .graimg>div{
 /*    background-color: fuchsia;*/
     width: 65%;
-    height: 90%;
+    height: 80%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -604,22 +602,28 @@ h1{
 .graimg img{
     width: 100%;
     align-self: flex-start;
+        box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.2);
+    border-radius: 25px;
 }
 .graimg button{
+    width: 50%;
     border: none;
-    color: #c4c4c4;
+    color: rgb(255, 255, 255);
     text-align: center;
     text-decoration: none;
     font-size: 1em;
-    background-color:#ffffff;
+    background-color:rgba(0, 0, 0, 0.4);
     border-radius: 300px;
     padding: 0.8% 1%;
 /*    cursor: pointer;*/
     position: fixed;
-    top:91%;
+    bottom:2%;
+    right: 25%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    
+    box-shadow: 0px 0px 3px 5px rgba(0, 0, 0, 0.2);
 }
 .graimg button i{
     font-size: 1.5em;
