--- a/css/index.css
+++ b/css/index.css
@@ -247,7 +247,13 @@ h1{
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    box-shadow: 10px 5px 20px rgba(106, 103, 103, 0.09);
+    box-shadow: 0px 0px 15px 0px rgba(106, 103, 103, 0.5);
+}
+#web-esis{
+    background-image: url("../images/web/esis.png");
+}
+#web-esisl{
+    background-image: url("../images/web/esisl.png");
 }
 #web-pento{
     background-image: url("../images/web/pento.png");
@@ -260,6 +266,15 @@ h1{
     background-position: 50% 43% ;
 }
 @media screen and (max-width: 769px) {
+    #web-esis{
+        background-image: url("../images/web/esis2.png");
+    }
+    #web-esisl{
+        background-image: url("../images/web/esisl2.png");
+    }
+    
+    
+    
     #web-pento{
         background-image: url("../images/web/pento2.png");
     }
@@ -269,7 +284,7 @@ h1{
     #web-first{
         background-image: url("../images/web/first2.jpg");
         background-position: 50% 43% ;
-    }  
+    }
 }
 .web>a{
     position: absolute;
@@ -357,7 +372,7 @@ h1{
     .web{
         border-radius: 30px 30px 0px 0px;
     }
-    #web-first,#web-gaja{
+    #web-esisl,#web-pento,#web-first,#web-gaja{
         margin-top: 320px;
     }
     .coverarea{
@@ -366,6 +381,13 @@ h1{
         height: 300px;
         border-radius: 0px 0px 30px 30px;
         padding: 0 6%;
+        padding-top: 20px;
+    }
+    #web-esis .coverarea{
+        background-color: #fffadf;
+    }
+    #web-esisl .coverarea{
+        background-color: #2d5d26;
     }
     #web-pento .coverarea{
         background-color: #FEFBEE;
@@ -389,6 +411,17 @@ h1{
         font-size: 0.9em;
         margin-bottom: 0px; 
     }
+    #web-esis .coverarea h3{
+        color:#39baba;
+        border-bottom: 2px solid #39baba;
+    }
+    #web-esisl .coverarea h3{
+        color:#f8ffc0;
+        border-bottom: 2px solid #f8ffc0;
+    }
+    #web-esisl .coverarea p{
+        color:#ffffff;
+    } 
     #web-pento .coverarea p{
         color:#aa9989;
     }
